--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.toggler {
+.toggler { 
   display: none;
 }
 @media (max-width: 800px) {
@@ -19,15 +19,18 @@
     height: 80px;
   }
   .menu {
-    display: block;
+     display: block;
     position: absolute;
     top: 80px;
-    background-color: rgba(7, 5, 5, 0.653);
+    background-color: black;
     width: 100%;
     right: 0;
     left: 0;
     padding-left: 10px;
     transition: all 1s ease-in-out;
     z-index: 100;
+   }
+   .menu a{
+     color: azure;
    }
 }
